--- a/source/jade/main.jade
+++ b/source/jade/main.jade
@@ -5,11 +5,11 @@ block title
 	| - Главная
 
 block styles
-	link(href="css/lightSlider.css", rel="stylesheet")
+	//-link(href="css/jquery.bxslider.css", rel="stylesheet")
 	link(href="css/jquery.datetimepicker.css", rel="stylesheet")
 
 block scripts
-	script(src="js/jquery.lightSlider.min.js", type="text/javascript")
+	script(src="js/jquery.bxslider.js", type="text/javascript")
 	script(src="js/jquery.datetimepicker.js", type="text/javascript")
 
 //- Контент
